clang/test/BSC/Negative/Trait/r3/trait_assignment/trait_assignment.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

#include <stddef.h>

trait F<T> {};

trait F<float>* f() {
    trait F<float>* a = NULL;
    return a;
}

int main() {
   int m = 0;
   trait F<int>* b = f();  // expected-error {{expected a pointer type which has implemented 'trait F<int>', found 'struct __Trait_F<float>'}}
   return 0;
}